--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -17,6 +17,7 @@
     <div class="form-group">
         <label th:for="employer">Employer</label>
         <select name="employerId">
+            <!-- Loop through employers and create an option for each -->
             <option th:each="employer : ${employers}"
                     th:text="${employer.name}"
                     th:value="${employer.id}"></option>
